[gd_scene load_steps=3 format=2]

[ext_resource path="res://GameObjects/Card/Components/InteractionHandler/InteractionHandler.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 289, 388 )

[node name="InteractionHandler" type="Area2D" groups=[
"card",
]]
z_index = 2
monitoring = false
monitorable = false
collision_mask = 0
script = ExtResource( 1 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PosTween" type="Tween" parent="."]

[node name="ScaleTween" type="Tween" parent="."]

[node name="FlipTween" type="Tween" parent="."]

[node name="GlowTween" type="Tween" parent="."]
